[package]
version = "0.0.1"
name = "ki6"
repository = ""
authors = ["Motoki Naruse <motoki@naru.se>"]
description = ""
categories = []
license = "AGPLv3"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
